cabal-version:       2.4

name:                adventOfCode
version:             0.1.0.0
synopsis:            "Advent of Code done in Haskell"
description:         "Done for the purposes of learning Haskell. Problems can be found here - https://adventofcode.com"
-- license-file:        LICENSE
author:              Anindya Sharma
-- maintainer:
-- copyright:
-- category:
-- extra-source-files:

library adventOfCodeUtils
  exposed-modules:     PiecewiseLinear
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.13.0.0
  hs-source-dirs:      utils/
  default-language:    Haskell2010

library adventOfCodeLib
  exposed-modules:     AllDays, Day1, Day2, Day3, Day4, Day5, Day6
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.13.0.0, containers, split, adventOfCodeUtils
  hs-source-dirs:      lib/
  default-language:    Haskell2010

executable adventOfCode
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.13.0.0, containers, adventOfCodeLib, adventOfCodeUtils
  hs-source-dirs:      app/
  default-language:    Haskell2010

test-Suite tests
  type:                exitcode-stdio-1.0
  main-is:             DayTests.hs
  hs-source-dirs:      tests/
  build-depends:       base ^>=4.13.0.0, HUnit, containers, adventOfCodeLib, adventOfCodeUtils
  default-language:    Haskell2010
