cabal-version:       2.4

name:                adventOfCode
version:             0.1.0.0
synopsis:            "Advent of Code done in Haskell"
description:         "Done for the purposes of learning Haskell. Problems can be found here - https://adventofcode.com"
-- license-file:        LICENSE
author:              Anindya Sharma
-- maintainer:
-- copyright:
-- category:
-- extra-source-files:

library adventOfCodeUtils
  exposed-modules:     PiecewiseLinear
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.13.0.0
  hs-source-dirs:      utils/
  default-language:    Haskell2010

library adventOfCodeLib
  exposed-modules:     AllDays, Day01, Day02, Day03, Day04, Day05, Day06, Day07, Day08, Day09, Day10, Day11, Day12, Day13, Day14, Day15, Day16, Day17, Day18, Day19, Day20, Day21, Day22, Day23, Day24, Day25
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.13.0.0, containers, split, adventOfCodeUtils
  hs-source-dirs:      lib/
  default-language:    Haskell2010

executable adventOfCode
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.13.0.0, containers, adventOfCodeLib, adventOfCodeUtils
  hs-source-dirs:      app/
  default-language:    Haskell2010

test-Suite tests
  type:                exitcode-stdio-1.0
  main-is:             DayTests.hs
  hs-source-dirs:      tests/
  build-depends:       base ^>=4.13.0.0, HUnit, containers, adventOfCodeLib, adventOfCodeUtils
  default-language:    Haskell2010
